--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "quill": "^1.3.7"
   },
   "devDependencies": {
-    "jest": "^25.1.0",
-    "leakage": "^0.5.0"
+    "jest": "^25.1.0"
   }
 }
